fourm page banner text spacing issue fixed

--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -359,8 +359,12 @@
    @include breakpoint($tablet){
     margin: 0 30px;
    }
-  }
+  } 
 }
+
+.page-node-74566 .header_banner .banner_sub_text{
+    margin:0 0 0 203px;
+  }
 
 .header_banner{
   z-index: 0;
